--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -89,7 +89,7 @@
     <div class="col-12 col-xl-7">
       <div class="row gx-xl-8 gx-xxl-11">
         <h3 class="mb-4 text-center">Activity Timeline</h3>
-        <!-- Assuming this is your EJS template file (e.g., profile.ejs) -->
+        
         <div
           class="col-xl-12 overflow-auto scrollbar-overlay"
           style="height: 75vh"
@@ -126,10 +126,12 @@
                       <span class="fa-solid fa-calendar text-info fs--1"></span>
                       <%}else %> <% if(itemArray.type === 'Upload Files') {%>
                       <span
-                        class="fa-solid fa-file-arrow-up text-primary fs--1"
+                        class="fa-solid fa-file-arrow-up text-warning fs--1"
                       ></span>
                       <%}else %> <% if(itemArray.type === 'Upload Profile') {%>
-                      <span class="fa-solid fa-user text-primary fs--1"></span>
+                      <span class="fa-solid fa-user text-danger fs--1"></span>
+                      <% }else %> <% if(itemArray.type === 'Duty Handover') {%>
+                        <span class="fa-solid fa-rocket text-success fs--1"></span>
                       <% } %>
                     </div>
                     <% if ( lastItemIndex >= 0 &&
@@ -147,7 +149,7 @@
                   <div class="d-flex justify-content-between">
                     <div class="d-flex mb-2">
                       <h6 class="lh-sm mb-0 me-2 text-800 timeline-item-title">
-                        <%= itemArray.title %> & last item index <%= lastItemIndex %> & item index <%= itemIndex %>
+                        <%= itemArray.title %> 
                       </h6>
                     </div>
                     <p class="text-500 fs--1 mb-0 text-nowrap timeline-time">
@@ -158,7 +160,7 @@
                   <h6 class="fs--2 fw-normal mb-3">
                     by <a class="fw-semi-bold" href="#!"><%= itemArray.by %></a>
                   </h6>
-                  <p class="fs--1 text-800 w-sm-60 mb-5">
+                  <p class="fs--1 text-800 w-sm-60 mb-3">
                     <%= itemArray.about %>
                   </p>
                 </div>
