--- a/views/duty-handover-details.ejs
+++ b/views/duty-handover-details.ejs
@@ -53,7 +53,7 @@
                 >
                   <li class="nav-item">
                     <a
-                      class="nav-link active fw-semi-bold"
+                      class="nav-link <%= showTabPane1 %> fw-semi-bold"
                       href="#bootstrap-wizard-tab1"
                       data-bs-toggle="tab"
                       data-wizard-step="1"
@@ -63,14 +63,14 @@
                           ><span class="nav-item-circle"
                             ><span class="fas fa-lock"></span></span></span
                         ><span class="d-none d-md-block mt-1 fs--1"
-                          >Account</span
+                          >Handover</span
                         >
                       </div>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link fw-semi-bold"
+                      class="nav-link <%= showTabPane2 %> fw-semi-bold"
                       href="#bootstrap-wizard-tab2"
                       data-bs-toggle="tab"
                       data-wizard-step="2"
@@ -80,14 +80,14 @@
                           ><span class="nav-item-circle"
                             ><span class="fas fa-user"></span></span></span
                         ><span class="d-none d-md-block mt-1 fs--1"
-                          >Personal</span
+                          >Received</span
                         >
                       </div>
                     </a>
                   </li>
                   <li class="nav-item">
                     <a
-                      class="nav-link fw-semi-bold"
+                      class="nav-link <%= showTabPane3 %> fw-semi-bold"
                       href="#bootstrap-wizard-tab3"
                       data-bs-toggle="tab"
                       data-wizard-step="3"
@@ -104,8 +104,9 @@
               </div>
               <div class="card-body pt-4 pb-0">
                 <div class="tab-content">
+                  <!-- tab-pane 1 -->
                   <div
-                    class="tab-pane active"
+                    class="tab-pane <%= showTabPane1 %>"
                     role="tabpanel"
                     aria-labelledby="bootstrap-wizard-tab1"
                     id="bootstrap-wizard-tab1"
@@ -115,7 +116,7 @@
                       novalidate="novalidate"
                       data-wizard-form="1"
                     >
-                      <div class="row g-3 mb-3">
+                      <div class="row g-3">
                         <div class="col-6 mb-2">
                           <label
                             class="form-label text-900"
@@ -179,19 +180,33 @@
                           </div>
                         </div>
                       </div>
+
+                      <!-- next button for wizard -->
+                      <div class="flex-1 text-end py-3">
+                        <button
+                          class="btn btn-primary px-6 px-sm-6"
+                          type="submit"
+                          data-wizard-next-btn="data-wizard-next-btn"
+                        >
+                          Next<span
+                            class="fas fa-chevron-right ms-1"
+                            data-fa-transform="shrink-3"
+                          ></span>
+                        </button>
+                      </div>
                     </form>
                   </div>
+                  <!-- tab-pane 2 -->
                   <div
-                    class="tab-pane"
+                    class="tab-pane <%= showTabPane2 %>"
                     role="tabpanel"
                     aria-labelledby="bootstrap-wizard-tab2"
                     id="bootstrap-wizard-tab2"
                   >
                     <form
-                      id="wizardForm2"
-                      novalidate="novalidate"
-                      data-wizard-form="2"
-                      class="row g-3"
+                      class="row g-3 has-validation"
+                      action="/duty-handover/details"
+                      method="post"
                     >
                       <!-- form title report -->
                       <div class="col-md-4">
@@ -200,10 +215,9 @@
                         >
 
                         <select
-                          class="form-select <%= validationShift %>"
+                          class="form-select"
                           id="validationCustom04"
                           name="shift"
-                          disabled
                         >
                           <option selected="" value="<%= handoverShift %>">
                             <%= handoverShift %>
@@ -222,14 +236,13 @@
                         <label class="form-label" for="datepicker1">Date</label>
 
                         <input
-                          class="form-control <%= validationDate %> datetimepicker flatpickr-input"
+                          class="form-control datetimepicker flatpickr-input"
                           id="datepicker1"
                           type="text"
                           placeholder="day/month/year"
                           data-options='{"dateFormat":"d/m/y","disableMobile":true,"allowInput":true}'
                           name="date"
                           value="<%= date %>"
-                          disabled
                         />
                         <div class="valid-feedback">Looks good!</div>
                         <div class="invalid-feedback">
@@ -246,7 +259,6 @@
                           class="form-select"
                           id="validationCustom05"
                           name="location"
-                          disabled
                         >
                           <option selected="" value="<%= location %>">
                             <%= location %>
@@ -288,14 +300,13 @@
 
                       <div class="col-md-6">
                         <label class="form-label" for="validationCustom04"
-                          >Handover shift to be received</label
+                          >Handover shift received from</label
                         >
 
                         <select
-                          class="form-select <%= validationHandoverShift %>"
+                          class="form-select"
                           id="validationCustom04"
                           name="handoverShift"
-                          disabled
                         >
                           <option selected="" value="<%= shift %>">
                             <%= shift %>
@@ -361,7 +372,7 @@
                         </div>
                       </div>
 
-                      <div class="col-12 gy-4 mb-3">
+                      <div class="col-12 gy-4">
                         <label
                           class="form-label"
                           for="floatingProjectDescription2"
@@ -388,10 +399,32 @@
                         value="<%= reportId %>"
                         name="confirmRid"
                       />
+
+                      <!-- button -->
+                      <div
+                        class="d-flex pager wizard list-inline justify-content-between mb-3"
+                      >
+                        <!-- previous button for wizard -->
+                        <button
+                          class="btn btn-link ps-0"
+                          type="button"
+                          data-wizard-prev-btn="data-wizard-prev-btn"
+                        >
+                          <span
+                            class="fas fa-chevron-left me-1"
+                            data-fa-transform="shrink-3"
+                          ></span
+                          >Previous
+                        </button>
+                        <button class="btn btn-primary text-end" type="submit">
+                          Submit
+                        </button>
+                      </div>
                     </form>
                   </div>
+                  <!-- tab-pane 3 -->
                   <div
-                    class="tab-pane"
+                    class="tab-pane <%= showTabPane3 %>"
                     role="tabpanel"
                     aria-labelledby="bootstrap-wizard-tab3"
                     id="bootstrap-wizard-tab3"
@@ -430,85 +463,22 @@
                   </div>
                 </div>
               </div>
-              <div
-                class="card-footer border-top-0"
-                data-wizard-footer="data-wizard-footer"
-              >
-                <div class="d-flex pager wizard list-inline mb-0">
-                  <button
-                    class="btn btn-link ps-0"
-                    type="button"
-                    data-wizard-prev-btn="data-wizard-prev-btn"
-                  >
-                    <svg
-                      class="svg-inline--fa fa-chevron-left me-1"
-                      data-fa-transform="shrink-3"
-                      aria-hidden="true"
-                      focusable="false"
-                      data-prefix="fas"
-                      data-icon="chevron-left"
-                      role="img"
-                      xmlns="http://www.w3.org/2000/svg"
-                      viewBox="0 0 320 512"
-                      data-fa-i2svg=""
-                      style="transform-origin: 0.3125em 0.5em"
-                    >
-                      <g transform="translate(160 256)">
-                        <g
-                          transform="translate(0, 0)  scale(0.8125, 0.8125)  rotate(0 0 0)"
-                        >
-                          <path
-                            fill="currentColor"
-                            d="M224 480c-8.188 0-16.38-3.125-22.62-9.375l-192-192c-12.5-12.5-12.5-32.75 0-45.25l192-192c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25L77.25 256l169.4 169.4c12.5 12.5 12.5 32.75 0 45.25C240.4 476.9 232.2 480 224 480z"
-                            transform="translate(-160 -256)"
-                          ></path>
-                        </g>
-                      </g></svg
-                    ><!-- <span class="fas fa-chevron-left me-1" data-fa-transform="shrink-3"></span> Font Awesome fontawesome.com -->Previous
-                  </button>
-                  <div class="flex-1 text-end">
-                    <button
-                      class="btn btn-primary px-6 px-sm-6"
-                      type="submit"
-                      data-wizard-next-btn="data-wizard-next-btn"
-                    >
-                      Next<svg
-                        class="svg-inline--fa fa-chevron-right ms-1"
-                        data-fa-transform="shrink-3"
-                        aria-hidden="true"
-                        focusable="false"
-                        data-prefix="fas"
-                        data-icon="chevron-right"
-                        role="img"
-                        xmlns="http://www.w3.org/2000/svg"
-                        viewBox="0 0 320 512"
-                        data-fa-i2svg=""
-                        style="transform-origin: 0.3125em 0.5em"
-                      >
-                        <g transform="translate(160 256)">
-                          <g
-                            transform="translate(0, 0)  scale(0.8125, 0.8125)  rotate(0 0 0)"
-                          >
-                            <path
-                              fill="currentColor"
-                              d="M96 480c-8.188 0-16.38-3.125-22.62-9.375c-12.5-12.5-12.5-32.75 0-45.25L242.8 256L73.38 86.63c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0l192 192c12.5 12.5 12.5 32.75 0 45.25l-192 192C112.4 476.9 104.2 480 96 480z"
-                              transform="translate(-160 -256)"
-                            ></path>
-                          </g>
-                        </g></svg
-                      ><!-- <span class="fas fa-chevron-right ms-1" data-fa-transform="shrink-3"> </span> Font Awesome fontawesome.com -->
-                    </button>
-                  </div>
-                </div>
-              </div>
             </div>
           </div>
 
-            <hr />
-            <h4 class="text-1100 mt-2">Log Report</h4>
-            <p class="mt-2 text-800"><%= giveLog %></p>
-
           <hr />
+          <h4 class="text-1100 mt-2 mb-2">Log Report</h4>
+          <p class="mt-2 text-800">
+            <strong>Handover</strong> - <%= giveLog %>
+          </p>
+
+          <% if (receivedLog === ''){
+            receivedLog = 'Have yet not submit receive handover form';
+          } %>
+          <p class="mt-2 text-800">
+            <strong>Received</strong> - <%= receivedLog %>
+          </p>
+
           <h3 class="text-1100 mt-2">Notes</h3>
           <p class="text-800 mb-3 mt-2"><%= notes %></p>
         </div>
@@ -516,5 +486,34 @@
     </div>
   </div>
 
-  <%- include("partials/navbar-script") %> <%- include("partials/footer") %>
+  <!-- alert toast -->
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+    <div class="d-flex">
+      <div
+        class="toast <%= toastShow %> align-items-center text-white bg-primary border-0 light"
+        role="alert"
+        data-bs-autohide="false"
+        aria-live="assertive"
+        aria-atomic="true"
+        id="alertToast"
+      >
+        <div class="d-flex justify-content-between">
+          <div class="toast-body px-0 py-3">
+            <code class="text-white"><%= toastMsg %></code>
+          </div>
+
+          <button
+            class="btn ms-2 p-0 btn-close-white"
+            type="button"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          >
+            <span class="uil uil-times fs-1"></span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+<%- include("partials/navbar-script") %> <%- include("partials/footer") %>
