Done on user and head shift user part

--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -19,7 +19,7 @@
             <!--/.bg-holder-->
 
             <% if(currentProfile === ''){ currentProfile =
-            'assets/img/team/avatar.webp'; } %>
+            '/assets/img/team/avatar.webp'; } %>
             <form
               action="/social/settings/upload-profile"
               method="post"
