--- a/views/duty-handover-details.ejs
+++ b/views/duty-handover-details.ejs
@@ -9,12 +9,14 @@
           <nav class="mb-4" aria-label="breadcrumb">
             <ol class="breadcrumb mb-0">
               <li class="breadcrumb-item active">Duty Handover</li>
+              <li class="breadcrumb-item active"><%= location %></li>
               <li class="breadcrumb-item active">Details</li>
             </ol>
           </nav>
           <div class="d-flex justify-content-between">
             <h2 class="text-black fw-bolder mb-2">Duty Handover Details</h2>
             <div class="font-sans-serif btn-reveal-trigger">
+              <p class="badge badge-phoenix badge-phoenix-success"><%= status %></p>
               <button
                 class="btn btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
                 type="button"
@@ -61,7 +63,7 @@
                       <div class="text-center d-inline-block">
                         <span class="nav-item-circle-parent"
                           ><span class="nav-item-circle"
-                            ><span class="fas fa-lock"></span></span></span
+                            ><span class="fas fa-thumbs-up"></span></span></span
                         ><span class="d-none d-md-block mt-1 fs--1"
                           >Handover</span
                         >
@@ -78,7 +80,9 @@
                       <div class="text-center d-inline-block">
                         <span class="nav-item-circle-parent"
                           ><span class="nav-item-circle"
-                            ><span class="fas fa-user"></span></span></span
+                            ><span
+                              class="fas fa-handshake-simple"
+                            ></span></span></span
                         ><span class="d-none d-md-block mt-1 fs--1"
                           >Received</span
                         >
@@ -179,6 +183,10 @@
                             />
                           </div>
                         </div>
+
+                        <hr />
+                        <h4 class="text-1100 mt-2 mb-2">Log Report</h4>
+                        <p class="mt-2 text-800"><%= giveLog %></p>
                       </div>
 
                       <!-- next button for wizard -->
@@ -429,35 +437,164 @@
                     aria-labelledby="bootstrap-wizard-tab3"
                     id="bootstrap-wizard-tab3"
                   >
-                    <div class="row flex-center pb-8 pt-4 gx-3 gy-4">
-                      <div class="col-12 col-sm-auto">
-                        <div class="text-center text-sm-start">
-                          <img
-                            class="d-dark-none"
-                            src="../../assets/img/spot-illustrations/38.webp"
-                            alt=""
-                            width="220"
-                          /><img
-                            class="d-light-none"
-                            src="../../assets/img/spot-illustrations/dark_38.webp"
-                            alt=""
-                            width="220"
-                          />
-                        </div>
+                    <div class="row g-3 g-sm-1 g-md-1">
+                      <h4 class="text-1100 mt-2">Handover</h4>
+                      <div class="col-12">
+                        <label
+                          class="form-label text-primary-300"
+                          for="showgiveLog"
+                          >Give Log</label
+                        >
+                        <p
+                          id="showgivelog"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= giveLog %>
+                        </p>
                       </div>
-                      <div class="col-12 col-sm-auto">
-                        <div class="text-center text-sm-start">
-                          <h5 class="mb-3">You are all set!</h5>
-                          <p class="text-1100 fs--1">
-                            Now you can access your account<br />anytime
-                            anywhere
-                          </p>
-                          <a
-                            class="btn btn-primary px-6"
-                            href="../../modules/forms/wizard.html"
-                            >Start Over</a
-                          >
-                        </div>
+                      <div class="col-12 col-xxl-6">
+                        <label
+                          class="form-label text-primary-300"
+                          for="giveshift"
+                          >Shift</label
+                        >
+                        <p
+                          id="giveshift"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= giveShift %>
+                        </p>
+                      </div>
+                      <div class="col-12 col-xxl-6">
+                        <label
+                          class="form-label text-primary-300"
+                          for="giveheadshift"
+                          >Head Shift</label
+                        >
+                        <p
+                          id="giveheadshift"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= giveHeadShift %>
+                        </p>
+                      </div>
+                      <div class="col-12">
+                        <label
+                          class="form-label text-primary-300"
+                          for="staffonduty"
+                          >Staff On Duty</label
+                        >
+                        <p
+                          id="staffonduty"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= giveStaffOnDuty %>
+                        </p>
+                      </div>
+                      <div class="col-12 col-xxl-6">
+                        <label
+                          class="form-label text-primary-300"
+                          for="givestaffonsickleave"
+                          >Staff Sick Leave</label
+                        >
+                        <p
+                          id="givestaffonsickleave"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= giveStaffSickLeave%>
+                        </p>
+                      </div>
+                      <div class="col-12 col-xxl-6">
+                        <label
+                          class="form-label text-primary-300"
+                          for="givestaffabsent"
+                          >Staff Absent</label
+                        >
+                        <p
+                          id="givestaffabsent"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= giveStaffAbsent %>
+                        </p>
+                      </div>
+                      <h4 class="text-1100 mt-2">Receive</h4>
+                      <div class="col-12">
+                        <label
+                          class="form-label text-primary-300"
+                          for="showgiveLog"
+                          >Receive Log</label
+                        >
+                        <p
+                          id="showgivelog"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= receiveLog %>
+                        </p>
+                      </div>
+                      <div class="col-12 col-xxl-6">
+                        <label
+                          class="form-label text-primary-300"
+                          for="giveshift"
+                          >Shift</label
+                        >
+                        <p
+                          id="giveshift"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= receiveShift %>
+                        </p>
+                      </div>
+                      <div class="col-12 col-xxl-6">
+                        <label
+                          class="form-label text-primary-300"
+                          for="giveheadshift"
+                          >Head Shift</label
+                        >
+                        <p
+                          id="giveheadshift"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= receiveHeadShift %>
+                        </p>
+                      </div>
+                      <div class="col-12">
+                        <label
+                          class="form-label text-primary-300"
+                          for="staffonduty"
+                          >Staff On Duty</label
+                        >
+                        <p
+                          id="staffonduty"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= receiveStaffOnDuty %>
+                        </p>
+                      </div>
+                      <div class="col-12 col-xxl-6">
+                        <label
+                          class="form-label text-primary-300"
+                          for="givestaffonsickleave"
+                          >Staff Sick Leave</label
+                        >
+                        <p
+                          id="givestaffonsickleave"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= receiveStaffSickLeave%>
+                        </p>
+                      </div>
+                      <div class="col-12 col-xxl-6 mb-3">
+                        <label
+                          class="form-label text-primary-300"
+                          for="givestaffabsent"
+                          >Staff Absent</label
+                        >
+                        <p
+                          id="givestaffabsent"
+                          class="border border-primary-300 rounded-3 p-2"
+                        >
+                          <%= receiveStaffAbsent %>
+                        </p>
                       </div>
                     </div>
                   </div>
@@ -466,21 +603,15 @@
             </div>
           </div>
 
-          <hr />
-          <h4 class="text-1100 mt-2 mb-2">Log Report</h4>
-          <p class="mt-2 text-800">
-            <strong>Handover</strong> - <%= giveLog %>
-          </p>
-
-          <% if (receivedLog === ''){
-            receivedLog = 'Have yet not submit receive handover form';
-          } %>
-          <p class="mt-2 text-800">
-            <strong>Received</strong> - <%= receivedLog %>
-          </p>
-
-          <h3 class="text-1100 mt-2">Notes</h3>
-          <p class="text-800 mb-3 mt-2"><%= notes %></p>
+          <div class="mt-3">
+            <div class="d-flex align-items-center mb-2">
+              <h4 class="me-3">Notes</h4>
+              <button class="btn btn-link p-0">
+                <span class="fa-solid fa-pen"></span>
+              </button>
+            </div>
+            <p class="text-1000"><%= notes %></p>
+          </div>
         </div>
       </div>
     </div>
