For heroku deployment

--- a/public/assets/css/user.css
+++ b/public/assets/css/user.css
@@ -8,12 +8,12 @@
 /* Customize the loading spinner animation */
 .loading::after {
   content: '';
-  border: 3px solid #f3f3f3; /* Light gray border */
-  border-top: 3px solid #007bff; /* Blue border for the spinner */
+  border: 3.25px solid #f3f3f3; /* Light gray border */
+  border-top: 3.25px solid transparent; /* Blue border for the spinner */
   border-radius: 50%;
-  width: 24px;
-  height: 24px;
-  animation: spin 1s linear infinite; /* Rotate the spinner */
+  width: 20px;
+  height: 20px;
+  animation: spin 0.8s linear infinite; /* Rotate the spinner */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -31,4 +31,8 @@
   100% {
     transform: translate(-50%, -50%) rotate(360deg);
   }
+}
+
+.noshow{
+  visibility: hidden;
 }
