--- a/views/home.ejs
+++ b/views/home.ejs
@@ -96,8 +96,8 @@
                         <a href="/patrol-report/view"
                           ><strong>Visit to location patrol</strong></a
                         >
-                        by submitting & viewing patrol report daily based on your
-                        location, shift etc.
+                        by submitting & viewing patrol report daily based on
+                        your location, shift etc.
                       </div>
                     </div>
                   </div>
@@ -125,9 +125,9 @@
                         <a href="/case-report/view"
                           ><strong>Visit to case report</strong></a
                         >
-                        by submitting and viewing your case report based on your with details
-                        such as date, location, event summary, action taken,
-                        report summary .
+                        by submitting and viewing your case report based on your
+                        with details such as date, location, event summary,
+                        action taken, report summary .
                       </div>
                     </div>
                   </div>
@@ -337,8 +337,8 @@
                         <a href="/social/profile"
                           ><strong>Visit to profile</strong></a
                         >
-                        by keeping up to date with your details, amount of report submitted which
-                        include their activity timeline.
+                        by keeping up to date with your details, amount of
+                        report submitted which include their activity timeline.
                       </div>
                     </div>
                   </div>
@@ -365,8 +365,8 @@
                         <a href="/social/settings"
                           ><strong>Visit to settings</strong></a
                         >
-                        through here, you can change your details such as email, name,
-                        phone number as well as your password.
+                        through here, you can change your details such as email,
+                        name, phone number as well as your password.
                       </div>
                     </div>
                   </div>
