--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -185,7 +185,7 @@
         aria-expanded="false"
       >
         <% if(currentProfile === ''){ currentProfile =
-        'assets/img/team/avatar.webp'; } %>
+        '/assets/img/team/avatar.webp'; } %>
         <div class="avatar avatar-l">
           <img
             class="rounded-circle bg-white border border-primary"
