--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -19,7 +19,7 @@
             <!--/.bg-holder-->
 
             <% if(currentProfile === ''){ currentProfile =
-            'assets/img/team/avatar.webp'; } %>
+            '/assets/img/team/avatar.webp'; } %>
 
             <div class="feed-profile" style="width: 150px; height: 150px">
               <div
