--- a/views/settings.ejs
+++ b/views/settings.ejs
@@ -60,11 +60,11 @@
                 </div>
               </div>
               <button
-                class="btn btn-primary z-index-1 position-absolute bottom-0 end-0 m-2"
+                class="btn btn-primary z-index-1 position-absolute bottom-0 end-0 m-2 myButton"
                 type="submit"
                 id="uploadProfile"
               >
-                Upload Profile
+                  <div class="btn-content">Upload Profile</div> 
               </button>
             </form>
           </div>
