--- a/views/duty-handover-details.ejs
+++ b/views/duty-handover-details.ejs
@@ -16,7 +16,9 @@
           <div class="d-flex justify-content-between">
             <h2 class="text-black fw-bolder mb-2">Duty Handover Details</h2>
             <div class="font-sans-serif btn-reveal-trigger">
-              <p class="badge badge-phoenix badge-phoenix-success"><%= status %></p>
+              <p class="badge badge-phoenix badge-phoenix-success">
+                <%= status %>
+              </p>
               <button
                 class="btn btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
                 type="button"
@@ -606,7 +608,11 @@
           <div class="mt-3">
             <div class="d-flex align-items-center mb-2">
               <h4 class="me-3">Notes</h4>
-              <button class="btn btn-link p-0">
+              <button
+                class="btn btn-link p-0"
+                data-bs-toggle="modal"
+                data-bs-target="#modalNotes"
+              >
                 <span class="fa-solid fa-pen"></span>
               </button>
             </div>
@@ -642,6 +648,65 @@
             <span class="uil uil-times fs-1"></span>
           </button>
         </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="modalNotes"
+  tabindex="-1"
+  aria-labelledby="verticallyCenteredModalLabel"
+  aria-hidden="true"
+  style="display: none"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="verticallyCenteredModalLabel">
+          Modal title
+        </h5>
+        <button
+          class="btn p-1"
+          type="button"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        >
+          <svg
+            class="svg-inline--fa fa-xmark fs--1"
+            aria-hidden="true"
+            focusable="false"
+            data-prefix="fas"
+            data-icon="xmark"
+            role="img"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 320 512"
+            data-fa-i2svg=""
+          >
+            <path
+              fill="currentColor"
+              d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
+            ></path></svg
+          ><!-- <span class="fas fa-times fs--1"></span> Font Awesome fontawesome.com -->
+        </button>
+      </div>
+      <div class="modal-body">
+        <p class="text-700 lh-lg mb-0">
+          This is a static modal example (meaning its position and display have
+          been overridden). Included are the modal header, modal body (required
+          for padding), and modal footer (optional).
+        </p>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-primary" type="button">Okay</button>
+        <button
+          class="btn btn-outline-primary"
+          type="button"
+          data-bs-dismiss="modal"
+        >
+          Cancel
+        </button>
       </div>
     </div>
   </div>
