--- a/views/patrol-report-submit.ejs
+++ b/views/patrol-report-submit.ejs
@@ -477,8 +477,17 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary" type="submit" id="uploadButton">
-          <i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload
+        <button
+          class="btn btn-primary myButton"
+          type="submit"
+          id="uploadButton"
+        >
+          <div class="btn-content">
+            <span
+              ><i class="fa fa-upload" aria-hidden="true"></i
+              >&nbsp;&nbsp;Upload</span
+            >
+          </div>
         </button>
         <button
           class="btn btn-outline-primary"
@@ -519,7 +528,6 @@
       </div>
     </div>
   </div>
-  
 </div>
 
 <%-include("partials/navbar-script.ejs") %> <%-include("partials/footer") %>
