--- a/views/schedule-submit.ejs
+++ b/views/schedule-submit.ejs
@@ -405,8 +405,17 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button class="btn btn-primary" type="submit" id="uploadButton">
-          <i class="fa fa-upload" aria-hidden="true"></i>&nbsp;&nbsp;Upload
+        <button
+          class="btn btn-primary myButton"
+          type="submit"
+          id="uploadButton"
+        >
+          <div class="btn-content">
+            <span
+              ><i class="fa fa-upload" aria-hidden="true"></i
+              >&nbsp;&nbsp;Upload</span
+            >
+          </div>
         </button>
         <button
           class="btn btn-outline-primary"
@@ -447,7 +456,6 @@
       </div>
     </div>
   </div>
-  
 </div>
 
 <%- include("partials/navbar-script") %> <%- include("partials/footer") %>
