--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -92,6 +92,21 @@
               <div class="invalid-feedback">This is required</div>
             </div>
           </div>
+          <div class="row g-3 mb-3">
+            <div class="col-sm-12">
+              <label class="form-label" for="phone">Phone number</label>
+              <input
+                class="form-control form-icon-input"
+                id="phoneNumber"
+                name="phone"
+                type="text"
+                placeholder="Phone"
+                required=""
+              />
+              <div class="valid-feedback">Looks good!</div>
+              <div class="invalid-feedback">This is required</div>
+            </div>
+          </div>
 
           <div class="form-check mb-3">
             <input
