--- a/views/schedule-submit.ejs
+++ b/views/schedule-submit.ejs
@@ -202,11 +202,11 @@
                   <!-- Submit button -->
                   <div class="col-12">
                     <button
-                      class="btn btn-primary"
+                      class="btn btn-primary myButton"
                       type="submit"
                       id="submitReport"
                     >
-                      Submit form
+                      <div class="btn-content">Submit Form</div>
                     </button>
                     <a
                       role="button"
