--- a/views/patrol-report-details.ejs
+++ b/views/patrol-report-details.ejs
@@ -15,7 +15,7 @@
           </nav>
           <div class="d-flex justify-content-between">
             <h2 class="text-black fw-bolder mb-2">Patrol Report Details</h2>
-            <div class="font-sans-serif btn-reveal-trigger">
+            <div class="font-sans-serif btn-reveal-trigger d-print-none">
               <button
                 class="btn btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
                 type="button"
@@ -30,7 +30,7 @@
               <div class="dropdown-menu dropdown-menu-end py-2">
                 <a class="dropdown-item" href="#!">Edit</a
                 ><a class="dropdown-item text-danger" href="#!">Delete</a
-                ><a class="dropdown-item" href="#!">Print</a>
+                ><a class="dropdown-item" href="#!" id="printLink">Print</a>
               </div>
             </div>
           </div>
@@ -125,8 +125,19 @@
         <p class="text-800 mb-4"><%= reportSummary %></p>
 
         <hr />
-        <h3 class="text-1100 mb-4 mt-4">Notes</h3>
-        <p class="text-800 mb-10"><%= notes %></p>
+        <div class="mt-0">
+          <div class="d-flex align-items-center mb-4">
+            <h3 class="text-1100 me-3">Notes</h3>
+            <button
+              class="btn btn-link p-0"
+              data-bs-toggle="modal"
+              data-bs-target="#modalNotes"
+            >
+              <span class="fa-solid fa-pen"></span>
+            </button>
+          </div>
+          <p class="text-800"><%= notes %></p>
+        </div>
       </div>
     </div>
 
@@ -164,10 +175,12 @@
                     <span class="fas fa-ellipsis-h"></span>
                   </button>
                   <div class="dropdown-menu dropdown-menu-end py-2">
-                    <a class="dropdown-item" href="#!">Edit</a
-                    ><a class="dropdown-item text-danger" href="#!">Delete</a
-                    ><a class="dropdown-item" href="#!">Download</a
-                    ><a class="dropdown-item" href="#!">Report abuse</a>
+                    <a class="dropdown-item text-danger" href="#!">Delete</a
+                    ><a
+                      class="dropdown-item"
+                      href="/download/<%= item.filename %>"
+                      >Download</a
+                    >
                   </div>
                 </div>
               </div>
@@ -192,10 +205,12 @@
               <div class="d-flex flex-between-center">
                 <div>
                   <div class="d-flex align-items-center mb-1 flex-wrap">
-                    <span
-                      class="fa-solid fa-file-lines me-2 fs--1 text-700"
-                    ></span>
-                    <p class="text-1000 mb-0 lh-1">Project.txt</p>
+                    <p class="text-1000 mb-0 lh-1">
+                      <span
+                        class="fa-solid fa-file-lines me-2 fs--1 text-700"
+                      ></span
+                      ><%= item.filename %>
+                    </p>
                   </div>
                   <div class="d-flex fs--1 text-700 mb-0 flex-wrap">
                     <a href="#!"><%= item.by %> </a
@@ -216,10 +231,12 @@
                     <span class="fas fa-ellipsis-h"></span>
                   </button>
                   <div class="dropdown-menu dropdown-menu-end py-2">
-                    <a class="dropdown-item" href="#!">Edit</a
-                    ><a class="dropdown-item text-danger" href="#!">Delete</a
-                    ><a class="dropdown-item" href="#!">Download</a
-                    ><a class="dropdown-item" href="#!">Report abuse</a>
+                    <a class="dropdown-item text-danger" href="#!">Delete</a
+                    ><a
+                      class="dropdown-item"
+                      href="/download/<%= item.filename %>"
+                      >Download</a
+                    >
                   </div>
                 </div>
               </div>
@@ -243,6 +260,93 @@
               ><span class="fas fa-plus me-1"></span>Add file(s)</a
             >
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div
+  class="modal fade"
+  id="modalNotes"
+  tabindex="-1"
+  aria-labelledby="verticallyCenteredModalLabel"
+  aria-hidden="true"
+  style="display: none"
+>
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="verticallyCenteredModalLabel">Notes</h5>
+        <button
+          class="btn p-1"
+          type="button"
+          data-bs-dismiss="modal"
+          aria-label="Close"
+        >
+          <span class="fas fa-times fs--1"></span>
+        </button>
+      </div>
+
+      <div class="modal-body row">
+        <form
+          action="/notes-update/patrol-report"
+          method="post"
+          id="notesUpdateForm"
+        >
+          <div class="col-12 gy-4">
+            <textarea
+              class="form-control scrollbar-overlay mb-3"
+              id="notesInput"
+              placeholder="Leave a note here"
+              style="height: 75px"
+              name="notes"
+            ></textarea>
+          </div>
+
+          <input
+            type="text"
+            style="display: none"
+            value="<%= reportId %>"
+            name="confirmRid"
+          />
+
+          <button
+            class="btn btn-primary myButton"
+            type="submit"
+            id="updateNotes"
+          >
+            <div class="btn-content">Update</div>
+          </button>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- alert toast upload -->
+  <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 5">
+    <div class="d-flex">
+      <div
+        class="toast align-items-center text-white bg-primary border-0 light"
+        role="alert"
+        data-bs-autohide="false"
+        aria-live="assertive"
+        aria-atomic="true"
+        id="alertUpdateToast"
+      >
+        <div class="d-flex justify-content-between">
+          <div class="toast-body px-0 py-3">
+            <code id="notesAlertContent" class="text-white"></code>
+          </div>
+
+          <button
+            class="btn ms-2 p-0 btn-close-white"
+            type="button"
+            data-bs-dismiss="toast"
+            aria-label="Close"
+          >
+            <span class="uil uil-times fs-1"></span>
+          </button>
         </div>
       </div>
     </div>
