--- a/views/case-report-details.ejs
+++ b/views/case-report-details.ejs
@@ -2,7 +2,7 @@
 
 <div class="content px-0 pt-9">
   <div class="row g-0">
-    <div class="col-12 col-xxl-10 px-0 bg-soft">
+    <div class="col-12 col-xxl-9 px-0 bg-soft">
       <div class="px-4 px-lg-6 pt-6 pb-9">
         <!-- top header section -->
         <div class="mb-5">
@@ -15,7 +15,7 @@
           </nav>
           <div class="d-flex justify-content-between">
             <h2 class="text-black fw-bolder mb-2">Case Report Details</h2>
-            <div class="font-sans-serif btn-reveal-trigger">
+            <div class="font-sans-serif btn-reveal-trigger d-print-none">
               <button
                 class="btn btn-sm dropdown-toggle dropdown-caret-none transition-none btn-reveal"
                 type="button"
@@ -28,9 +28,9 @@
                 <span class="fas fa-ellipsis-h"></span>
               </button>
               <div class="dropdown-menu dropdown-menu-end py-2">
-                <a class="dropdown-item" href="#!">Edit</a
-                ><a class="dropdown-item text-danger" href="#!">Delete</a
-                ><a class="dropdown-item" href="#!">Print</a>
+                <!-- <a class="dropdown-item" href="#!">Edit</a
+                ><a class="dropdown-item text-danger" href="#!">Delete</a> -->
+                <a class="dropdown-item" id="printLink">Print</a>
               </div>
             </div>
           </div>
@@ -150,12 +150,11 @@
           </div>
           <p class="text-800"><%= notes || '' %></p>
         </div>
-        
       </div>
     </div>
 
     <div
-      class="col-12 col-xxl-2 px-0 border-start-xxl border-300 border-top-sm"
+      class="col-12 col-xxl-3 px-0 border-start-xxl border-300 border-top-sm"
     >
       <div class="h-100">
         <div class="bg-light dark__bg-1100 min-vh-100">
@@ -188,10 +187,11 @@
                     <span class="fas fa-ellipsis-h"></span>
                   </button>
                   <div class="dropdown-menu dropdown-menu-end py-2">
-                    <a class="dropdown-item" href="#!">Edit</a
-                    ><a class="dropdown-item text-danger" href="#!">Delete</a
-                    ><a class="dropdown-item" href="#!">Download</a
-                    ><a class="dropdown-item" href="#!">Report abuse</a>
+                    <a
+                      class="dropdown-item"
+                      href="/download/<%= item.filename %>"
+                      >Download</a
+                    >
                   </div>
                 </div>
               </div>
@@ -240,10 +240,11 @@
                     <span class="fas fa-ellipsis-h"></span>
                   </button>
                   <div class="dropdown-menu dropdown-menu-end py-2">
-                    <a class="dropdown-item" href="#!">Edit</a
-                    ><a class="dropdown-item text-danger" href="#!">Delete</a
-                    ><a class="dropdown-item" href="#!">Download</a
-                    ><a class="dropdown-item" href="#!">Report abuse</a>
+                    <a
+                      class="dropdown-item"
+                      href="/download/<%= item.filename %>"
+                      >Download</a
+                    >
                   </div>
                 </div>
               </div>
@@ -262,11 +263,7 @@
             </div>
           </div>
           <% } %>
-          <div class="px-5 py-3 px-md-6 mt-3 mb-9">
-            <a class="fw-bold fs--1" href="#!"
-              ><span class="fas fa-plus me-1"></span>Add file(s)</a
-            >
-          </div>
+          <div class="px-5 py-3 px-md-6 mt-3 mb-9"></div>
         </div>
       </div>
     </div>
@@ -308,7 +305,9 @@
               placeholder="Leave a note here"
               style="height: 75px"
               name="notes"
-            ><%= reportId %></textarea>
+            >
+<%= reportId %></textarea
+            >
           </div>
 
           <input
@@ -359,6 +358,5 @@
     </div>
   </div>
 </div>
-
 
 <%- include("partials/navbar-script") %> <%- include("partials/footer") %>
