--- a/views/patrol-report-view.ejs
+++ b/views/patrol-report-view.ejs
@@ -217,9 +217,9 @@
                     <span class="fas fa-ellipsis-h fs--2"></span>
                   </button>
                   <div class="dropdown-menu dropdown-menu-end py-2">
-                    <a class="dropdown-item" href="#!">View</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item text-danger" href="#!">Remove</a>
+                    <a class="dropdown-item" href="/patrol-report/details?id=<%= item.reportId %>">View</a>
+                    <!-- <div class="dropdown-divider"></div>
+                    <a class="dropdown-item text-danger" href="#!">Remove</a> -->
                   </div>
                 </div>
               </td>
